--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -1,7 +1,8 @@
 .navgation > li > a:hover,
-.navbar > li > a:hover {
+.navbar > li > a:hover,
+.menu-horizontal li > a:hover {
 	background-color: transparent;
-	color: rgba(255, 255, 255, 0.596);
+	color: rgba(255, 255, 255, 0.753);
 }
 .menu-horizontal li > a.active {
 	background: transparent;
